﻿shmuel 25.05.2014 18:17:51 +0200 - build 347

1. Продолжение 332.

shmuel 24.05.2014 20:09:27 +0200 - build 346

1. Починим вложенные макросы.

shmuel 24.05.2014 17:26:49 +0200 - build 345

1. Продолжение 332.

shmuel 24.05.2014 00:37:50 +0200 - build 344

1. Уточнение 343.

shmuel 23.05.2014 19:52:47 +0200 - build 343

1. Продолжение 332.

shmuel 23.05.2014 01:47:14 +0200 - build 342

1. Продолжение 332.

shmuel 21.05.2014 18:08:08 +0200 - build 341

1. Продолжение 332.

shmuel 17.05.2014 23:58:48 +0200 - build 340

1. Продолжение 332.

shmuel 15.05.2014 23:27:15 +0200 - build 339

1. LuaFAR: compilation warnings.

shmuel 15.05.2014 00:12:19 +0200 - build 338

1. Продолжение 332.

shmuel 14.05.2014 17:11:46 +0200 - build 337

1. M#2673: LuaFAR: дополнительные параметры для far.Timer.

zg 13.05.2014 20:18:30 +0200 - build 336

1. %farprofile%\Macros\modules добавлен в package.moonpath.

shmuel 13.05.2014 17:22:27 +0200 - build 335

1. Из-за 328.1 не инициализировался package.moonpath.

zg 13.05.2014 04:31:07 +0200 - build 334

1. %farprofile%\Macros\modules добавлен в package.cpath.

shmuel 13.05.2014 00:35:01 +0200 - build 333

1. Продолжение 332.

shmuel 12.05.2014 13:05:51 +0200 - build 332

1. Рефакторинг в системе макросов.

shmuel 11.05.2014 02:47:01 +0200 - build 331

1. Из форума: ошибка moonscript.lua:677: too many pending calls/choices
   Ошибка проявлялась после перезагрузки макросов на вложенном цикле глубиной 8.

shmuel 07.05.2014 16:59:17 +0200 - build 330

1. LuaFAR: добавлен метод "send" хэндлу диалога.
   Выражение hDlg:send(...) соответствует выражению far.SendDlgMessage(hDlg, ...)

shmuel 05.05.2014 22:50:22 +0200 - build 329

1. Рефакторинг.

shmuel 05.05.2014 15:24:35 +0200 - build 328

1. Force MoonScript to load lpeg.dll residing in %farhome%.

2. M#2388: При ошибках сообщения системы на русском могут не отображаться.

shmuel 04.05.2014 11:24:24 +0200 - build 327
